--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DATABASE_URL=postgres://rosbobos:Munchkin0311@localhost:5432/books
+DATABASE_URL=postgres://rosbobos:Munchkin0311@localhost:5432/book_app
